--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,27 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Page title</title>
-    <link rel="stylesheet" href="./sass/index.scss" />
-    <script type="module" src="./index.js"></script>
+    <title>Goit-js-hw-11</title>
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <!-- ❗️❗️❗️ Add partials like so for every page -->
-    <include src="./partials/example.html"></include>
+    <div class="animation-container">
+      <form class="search-form" id="search-form">
+        <input
+          class="search-form__input"
+          type="text"
+          name="searchQuery"
+          autocomplete="off"
+          placeholder="Search images..."
+        />
+
+        <button class="search-form__btn" type="submit">Search</button>
+      </form>
+    </div>
+
+    <div class="gallery"></div>
+    <div id="observer"></div>
+
+    <script type="module" src="./index.js"></script>
   </body>
 </html>
